--- a/package.json
+++ b/package.json
@@ -3,12 +3,13 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --turbopack",
-    "build": "next build --turbopack",
+    "dev": "next dev --turbopack", 
+    "build": "next build",         
     "start": "next start",
     "lint": "eslint"
   },
   "dependencies": {
+    "@ducanh2912/next-pwa": "^10.2.9",
     "@hookform/resolvers": "^5.2.1",
     "@radix-ui/react-accordion": "^1.2.12",
     "@radix-ui/react-alert-dialog": "^1.1.15",
@@ -47,6 +48,7 @@
     "input-otp": "^1.4.2",
     "lucide-react": "^0.542.0",
     "next": "15.5.2",
+    "next-pwa": "^5.6.0",
     "next-themes": "^0.4.6",
     "react": "19.1.0",
     "react-day-picker": "^9.9.0",
